# good-repo

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Makefile  README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: codeql-analysis.yml  container-release.yml  container-scan.yml  container-test.yml  dependency-review.yml  pre-commit-update.yml  release.yml  scan.yml  super-linter.yml  test.yml  zizmor.yml
app/: main.py
good_repo.egg-info/: SOURCES.txt
tests/: __init__.py  test_main.py  test_main_mock.py  test_structure.py
