[project]
name = "good-repo"
version = "0.0.1"
description = "Proof of Concept of a good repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.11",
    "zizmor==1.8.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", ".venv/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
