[project]
name = "good-repo"
version = "0.0.1"
description = "Proof of Concept of a good repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "ruff==0.12.9",
    "zizmor==1.12.1",
]

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"
